--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="https://dushyant03.github.io/blogness/"><img class="app-header-avatar" src="/blogness/static/images/my-image.jpg/" alt="Dushyant Chakravorty" /></a>
+      <a href="https://dushyant03.github.io/blogness/"><img class="app-header-avatar" src="/blogness/images/avatar.jpg/" alt="Dushyant Chakravorty" /></a>
       <span class="app-header-title">The Blogness</span>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/blogness/about/">About</a>
